dpkg-dev-el (37.11) UNRELEASED; urgency=medium

  * Team upload.
  * d/control: add elpa-debian-el to the dependencies of elpa-dpkg-dev-el
    (Closes: #1061650).

 -- Xiyue Deng <manphiz@gmail.com>  Sat, 27 Jan 2024 19:41:06 -0800

dpkg-dev-el (37.10) unstable; urgency=medium

  * Team upload

  [ Nicholas D Steeves ]
  * Drop emacs25 from Enhances (package does not exist in bullseye).

  [ Amin Bandali ]
  * Fix a few warnings.

  [ Xiyue Deng ]
  * Convert debian-changelog-mode file encoding to UTF-8
  * Drop emacs version from recommends
  * Update Standards-Version to 4.6.2, no changes needed
  * Migrate to debhelper-compat version 13
  * Mark Rules-Requires-Root as no in d/control
  * Use dh_elpa to generate autoloads and pkg el files
  * Add "Package" to debian-control-binary-fields
  * Fix a few more warnings
  * Add Upstream-Contact to d/copyright

 -- Arto Jantunen <viiru@debian.org>  Sat, 27 Jan 2024 14:47:15 +0200

dpkg-dev-el (37.9) unstable; urgency=medium

  * Rebuild with current dh-elpa (no changes)

 -- David Bremner <bremner@debian.org>  Sun, 06 Dec 2020 08:14:57 -0400

dpkg-dev-el (37.8) unstable; urgency=medium

  [ Nicholas D Steeves ]
  * Remove trailing whitespace and inconsistent use of newlines.
  * Update metadata headers needed for ELPA packages (Closes: #911062).
    - Add Commentary and Code sections to debian-copyright.el.
    - Add Commentary section to readme-debian.el.
    - Fix Commentary section in dpkg-dev-el.el.
    - Add Copyright, Author, and Created headers to dpkg-dev-el.el.
    - Make GPL-2+ licensing explicit in dpkg-dev-el.el by adding a GPL-2+
      licensing header.  Previously this could only be determined by
      examining debian/copyright.
  * debian/copyright:
    - Add entry for dpkg-dev-el.el.
    - Use secure copyright-format URL.
  * dpkg-dev-el.el: Change description to name dpkg-dev-el rather than
    debian-el, which is now anachronistic.

  [ David Bremner ]
  * rebuild with dh_elpa 1.16
